feat(multi-select): option can now be deprecated
add flag to an option so it will not shown in list but in selected

DIGIB2-1200
